--- a/src/Suriging.Identity/Surging.Identity.Server/eventBusSettings.json
+++ b/src/Suriging.Identity/Surging.Identity.Server/eventBusSettings.json
@@ -2,8 +2,6 @@
   "EventBusConnection": "localhost",
   "EventBusUserName": "guest",
   "EventBusPassword": "guest",
-  "VirtualHost": "/",
-  "BrokerName": "surging_demo",
-  "Port": "5672"
+  "Port": 5672
 }
 
