--- a/src/Suriging.Identity/Surging.Identity.Database/Surging.Identity.Database.csproj
+++ b/src/Suriging.Identity/Surging.Identity.Database/Surging.Identity.Database.csproj
@@ -8,9 +8,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Surging.Core\Surging.Core.CPlatform\Surging.Core.CPlatform.csproj" />
     <ProjectReference Include="..\Surging.Identity.Core\Surging.Identity.Core.csproj" />
   </ItemGroup>
 
