--- a/src/Suriging.Identity/Surging.Identity.xUnitTest/Surging.Identity.xUnitTest.csproj
+++ b/src/Suriging.Identity/Surging.Identity.xUnitTest/Surging.Identity.xUnitTest.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="xunit" Version="2.3.1" />
@@ -16,6 +18,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Surging.Identity.ModuleService\Surging.Identity.ModuleService.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
