--- a/src/Suriging.Identity/Surging.Identity.xUnitTest/appSettings.json
+++ b/src/Suriging.Identity/Surging.Identity.xUnitTest/appSettings.json
@@ -1,11 +1,5 @@
 {
-  "exclude": [
-    "**/bin",
-    "**/bower_components",
-    "**/jspm_packages",
-    "**/node_modules",
-    "**/obj",
-    "**/platforms"
-  ],
-  "TestString": "test"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=usertest;Integrated Security=True;User ID=sa;Password=123456;Persist Security Info=True;Integrated Security=False;MultipleActiveResultSets=true;Max Pool Size=512"
+  }
 }
